RESOLVED FIXED97687
4.95MB below RenderBlock::insertIntoTrackedRendererMaps() on Membuster3.
https://bugs.webkit.org/show_bug.cgi?id=97687
Summary 4.95MB below RenderBlock::insertIntoTrackedRendererMaps() on Membuster3.
Andreas Kling
Reported 2012-09-26 08:25:44 PDT
We currently have 4.95MB of allocations below this function on the Membuster3 benchmark. I suspect it would be easy to reduce this by tweaking the ListHashSets used in the descendants map.
Attachments
Patch (1.59 KB, patch)
2012-09-26 09:03 PDT, Andreas Kling
andersca: review+
Patch for blending (1.59 KB, patch)
2012-09-26 11:04 PDT, Andreas Kling
webkit.review.bot: commit-queue-
Less Anders, more landability. (1.59 KB, patch)
2012-09-26 11:43 PDT, Andreas Kling
no flags
Radar WebKit Bug Importer
Comment 1 2012-09-26 08:26:07 PDT
Andreas Kling
Comment 2 2012-09-26 09:03:42 PDT
Anders Carlsson
Comment 3 2012-09-26 09:54:32 PDT
Comment on attachment 165818 [details] Patch Make it 16 and you've got yourself a deal!
Eric Seidel (no email)
Comment 4 2012-09-26 10:24:07 PDT
Thanks!
Andreas Kling
Comment 5 2012-09-26 11:04:08 PDT
Created attachment 165833 [details] Patch for blending
WebKit Review Bot
Comment 6 2012-09-26 11:13:00 PDT
Comment on attachment 165833 [details] Patch for blending Rejecting attachment 165833 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Karl Anders Carlsson found in /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14033515
Eric Seidel (no email)
Comment 7 2012-09-26 11:20:50 PDT
Fancified reviewer names don't blend.
Andreas Kling
Comment 8 2012-09-26 11:41:51 PDT
(In reply to comment #7) > Fancified reviewer names don't blend. Aw dangit!
Andreas Kling
Comment 9 2012-09-26 11:43:07 PDT
Created attachment 165840 [details] Less Anders, more landability.
WebKit Review Bot
Comment 10 2012-09-26 12:10:37 PDT
Comment on attachment 165840 [details] Less Anders, more landability. Clearing flags on attachment: 165840 Committed r129682: <http://trac.webkit.org/changeset/129682>
WebKit Review Bot
Comment 11 2012-09-26 12:10:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.