4.95MB below RenderBlock::insertIntoTrackedRendererMaps() on Membuster3. <http://webkit.org/b/97687>

Reviewed by Anders Carlsson.

Give the TrackedRendererListHashSet typedef an inline capacity of 16 (the default is 256.)
Browsing around the web, I saw almost no cases with more than 20 entries in these lists,
and this simple change saves us ~4.68MB on the Membuster3 benchmark.

* rendering/RenderBlock.h:


Canonical link: https://commits.webkit.org/115698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129682 268f45cc-cd09-0410-ab3c-d52691b4dbfc